# int_shop

./: main.py  pyproject.toml
src/database/: associative_tables.py  base.py  db_actions.py  models.py
src/parse_data/: parse_rozetka.py
